<resources>
    <string name="app_name">Curling Club Champions</string>
    <string name="play_button">PLAY!</string>
    <string name="puzzle_button">Puzzle Mode</string>
    <string name="free_play_button">Free Play</string>
    <string name="select_mode_title">Select Mode</string>
    <string name="puzzle_select_title">Select Puzzle</string>
    <string name="congratulations_text">Congratulations!</string>
    <string name="congratulations_info">Level complete.</string>
    <string name="star_progress">2/27 total stars achieved.</string>
    <string name="try_in_free_play">Try Free Play</string>
    <string name="next_level">Next Level</string>
    <string name="check_button">Check</string>
    <string name="info_button">Info</string>
    <string name="creator_save">Save</string>
    <string name="creator_switch_color">Switch Color</string>
    <string name="creator_remove_rocks_mode">Remove Rocks</string>
    <string name="place_win_area">Place Circle Win Area</string>
    <string name="creator_remove_win_area">Remove Win Area</string>
    <string name="creator_place_rec_win_area">Place Rectangle Win Area</string>
</resources>