<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_alignParentStart="true"
        android:drawableTop="@drawable/red_back_arrow">

    </Button>

    <Button
        android:id="@+id/puzzle_button"
        android:layout_width="220dp"
        android:layout_height="120dp"
        android:layout_below="@id/select_mode_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/aldrich"
        android:text="@string/puzzle_button"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/free_play_button"
        android:layout_width="220dp"
        android:layout_height="120dp"
        android:layout_below="@id/puzzle_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/aldrich"
        android:text="@string/free_play_button"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/select_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_mode_title"
        android:fontFamily="@font/aldrich"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:typeface="monospace"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/sliding_rocks"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/sliding_rocks" />
</RelativeLayout>