<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="0dp">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:src="@drawable/red_back_arrow"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">

    </ImageButton>

    <TextView
        android:id="@+id/congratulationsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/back_button"
        android:fontFamily="@font/aldrich"
        android:typeface="monospace"
        android:layout_centerHorizontal="true"
        android:text="@string/congratulations_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/solutionDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_below="@id/congratulations_info"
        android:fontFamily="@font/aldrich"
        android:typeface="monospace"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/congratulations_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/congratulationsText"
        android:text="@string/congratulations_info"
        android:fontFamily="@font/aldrich"
        android:typeface="monospace"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/star_large"
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/star" />

    <TextView
        android:id="@+id/starProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:layout_below="@id/star_large"
        android:layout_centerHorizontal="true"
        android:text="@string/star_progress"
        android:fontFamily="@font/aldrich"
        android:typeface="monospace"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:id="@+id/congratulations_buttons"
        android:layout_width="445dp"
        android:layout_height="142dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/star_large"
        android:padding="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/puzzleCreatorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="18dp"
            android:backgroundTint="@color/button"
            android:drawablePadding="8dp"
            android:fontFamily="@font/aldrich"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/try_in_free_play"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:typeface="monospace" />

        <Button
            android:id="@+id/nextLevelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/aldrich"
            android:text="@string/next_level"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:typeface="monospace" />
    </LinearLayout>

    <ImageView
        android:id="@+id/sliding_rocks"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_alignParentBottom="true"
        app:srcCompat="@drawable/sliding_rocks" />

</RelativeLayout>



